<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"

    android:divider="@color/black"
    android:dividerPadding="1dp"
    android:orientation="horizontal"
    android:rotationX="0"
    android:translationY="50dp">

    <TextView
        android:id="@+id/textview_stock_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/str_stock"

        android:textColor="#BC00DC"
        android:textFontWeight="@integer/material_motion_duration_medium_1"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textview_stock_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_weight="1"

        android:gravity="center"
        android:text="@string/str_price"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_buy"
        style="@android:style/Widget.Material.Light.Button.Toggle"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_baseline_add_shopping_cart_24"
        android:text="@string/button_buy" />

    <Button
        android:id="@+id/button_sell"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_baseline_shopping_cart_checkout_24"
        android:text="@string/button_sell" />

</LinearLayout>
