<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".LoginActivity">

    <TextView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textview_login"

        android:text="@string/str_login"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_margin="50dp"/>

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_login"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/str_username"
        android:padding="30dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:background="#31000000"
        android:drawableStart="@drawable/ic_baseline_person_outline_24"
        android:drawablePadding="20dp" />


    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_username"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/str_password"
        android:padding="30dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:background="#31000000"
        android:drawableStart="@drawable/ic_baseline_password_24"
        android:drawablePadding="20dp"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/button_login"
        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_password"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/str_login" />

    <TextView
        android:id="@+id/forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="1dp"
        android:text="@string/str_forgot_password"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-medium"/>


</RelativeLayout>
